fix the body horizontal scroll

--- a/src/sass/components/_navbarmenu.scss
+++ b/src/sass/components/_navbarmenu.scss
@@ -96,15 +96,11 @@
   }
 
   .mobil-menu-open {
-    // height: 100vh;
+    height: 100vh;
     width: 100%;
     position: fixed;
-    overflow-x: hidden !important;
+    // overflow-x: hidden !important;
     overflow-y: scroll;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     padding-top: 60px;
     clip-path: circle(15px at 98% -22%);
     -webkit-clip-path: circle(15px at 98% -22%);
